@@ -1,5 +1,5 @@
 # @configure_input@
-# $Id: defs.in,v 1.4 2012-11-28 17:37:23 karl Exp $
+# $Id: defs.in,v 1.5 2012-11-30 18:08:11 karl Exp $
 # 
 # Copyright 2008, 2012 Free Software Foundation, Inc.
 #
@@ -26,7 +26,7 @@ CDPATH=; unset CDPATH
 
 # Ensure we are running from the right directory.
 if test ! -f ./defs; then
-   echo "defs: not found in current directory" 1>&2
+   echo "$0: defs: not found in current directory." 1>&2
    exit 1
 fi
 
@@ -37,6 +37,15 @@ if test -z "$srcdir"; then
    srcdir=`echo "$0" | sed -e 's,/[^\\/]*$,,'`
    test $srcdir = $0 && srcdir=.
 fi
+
+# Two variables we use in the test scripts:
+top_builddir=@top_builddir@
+install_info=${top_builddir}/install-info/ginstall-info
+export install_info
+#
+top_srcdir=@top_srcdir@
+testdir=${top_srcdir}/install-info/tests
+export testdir
 
 # In case someone pedantic insists on using grep -E.
 : ${EGREP=egrep}
@@ -75,13 +84,18 @@ findprog ()
   return 1
 }
 
-
-# Two variables we use in the test scripts.
-
-top_builddir=@top_builddir@
-install_info=${top_builddir}/install-info/ginstall-info
-export install_info
-
-top_srcdir=@top_srcdir@
-testdir=${top_srcdir}/install-info/tests
-export testdir
+if findprog mktemp; then :; else
+# Some deficient proprietary systems lack mktemp; kowtow to them.
+# Our mktemp substitute doesn't need all the features of real mktemp;
+# our tests here only use it in the most simplistic way, to create a
+# temp file.  The autoconf manual suggests doing it in a temporary
+# directory (mode 700).  ($RANDOM may expand to nothing, but that's ok.)
+# We do not even bother to expand the X's in the template ...
+mktemp ()
+{
+  dir=$TMPDIR/iimktemp$$-$RANDOM
+  (umask 077 && mkdir "$dir")
+  touch "$dir/$1" || return 1
+  echo "$dir/$1"
+}
+fi
